--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- font awesomne -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <!-- skin css -->
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>Portfolio || Sudha Parajaya</title>
   </head>
 
