--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- font awesomne -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <!-- skin css -->
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Portfolio || Sudha Parajaya</title>
   </head>
 
@@ -21,14 +21,14 @@
       <div class="left_side">
         <div class="profiletext">
           <div class="imgBx">
-            <img src="img/avatar.png" alt="" />
+            <img src="img/profilepic.jpg" alt="" />
           </div>
           <h2>I Gede Sudha Parajaya <br /><span>Web Design</span></h2>
         </div>
 
         <!-- kontak info -->
         <div class="contactInfo">
-          <h3 class="title">Contact Info</h3>
+          <h3 class="title">Kontak Info</h3>
           <ul>
             <li>
               <span class="icon"><i class="fa-solid fa-phone"></i></span>
@@ -43,14 +43,8 @@
           </ul>
           <ul>
             <li>
-              <span class="icon"><i class="fa-brands fa-linkedin"></i></span>
-              <span class="text">www.linkedin.com/me</span>
-            </li>
-          </ul>
-          <ul>
-            <li>
               <span class="icon"><i class="fa-regular fa-address-book"></i></span>
-              <span class="text">Denpasar, Indonesia</span>
+              <span class="text">Jl. Sakura IV Gg.B No.7, Denpasar</span>
             </li>
           </ul>
         </div>
@@ -58,11 +52,11 @@
 
         <!-- pendidikan -->
         <div class="contactInfo education">
-          <h3 class="title">Education</h3>
+          <h3 class="title">Pendidikan</h3>
           <ul>
             <li>
               <h5>2015 - 2022</h5>
-              <h4>Sarjana Teknologi Informasi</h4>
+              <h4>S1 Teknologi Informasi</h4>
               <h4>Univesitas Udayana</h4>
             </li>
             <li>
@@ -78,21 +72,15 @@
           <h3 class="title">Language</h3>
           <ul>
             <li>
-              <span class="text">Bahasa Indonesia</span>
+              <span class="text">Bahasa Indonesia <span>90%</span></span>
               <span class="persentase">
                 <div style="width: 90%"></div>
               </span>
             </li>
             <li>
-              <span class="text">English</span>
+              <span class="text">English <span>45%</span></span>
               <span class="persentase">
-                <div style="width: 75%"></div>
-              </span>
-            </li>
-            <li>
-              <span class="text">Bahasa Bali</span>
-              <span class="persentase">
-                <div style="width: 50%"></div>
+                <div style="width: 45%"></div>
               </span>
             </li>
           </ul>
@@ -107,12 +95,12 @@
         <div class="about">
           <h2 class="title2">Profile</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae praesentium sapiente sint pariatur. Enim eligendi culpa facilis distinctio possimus mollitia ullam, quis, <br /><br />
+            Lulusan S1 Teknologi Informasi Universitas Udayana (IPK 3,41). Menguasai berbagai macam Bahasa Pemrograman dasar seperti HTML, PHP, CSS, dan Javascript.<br /><br />
             suscipit fuga asperiores, fugit incidunt voluptas officiis consectetur temporibus beatae similique nemo nobis natus sunt voluptates itaque aut! Architecto veniam consectetur itaque maxime quidem aperiam quos voluptatibus nam?
           </p>
         </div>
         <div class="about">
-          <h2 class="title2">Experience</h2>
+          <h2 class="title2">PENGALAMAN KERJA</h2>
           <div class="box">
             <div class="year_company">
               <h5>2018 - present</h5>
