update index dan css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="imgBx">
             <img src="img/profilepic.jpg" alt="" />
           </div>
-          <h2>I Gede Sudha Parajaya <br /><span>Web Design</span></h2>
+          <h2>I Gede Sudha Parajaya <br /><span></span></h2>
         </div>
 
         <!-- kontak info -->
@@ -78,7 +78,7 @@
               </span>
             </li>
             <li>
-              <span class="text">English <span>45%</span></span>
+              <span class="text english">English <span>45%</span></span>
               <span class="persentase">
                 <div style="width: 45%"></div>
               </span>
