update index cv

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="imgBx">
             <img src="img/profilepic.jpg" alt="" />
           </div>
-          <h2>I Gede Sudha Parajaya <br /><span></span></h2>
+          <h2>I Gede Sudha Parajaya, S.KOm <br /><span></span></h2>
         </div>
 
         <!-- kontak info -->
@@ -95,40 +95,45 @@
         <div class="about">
           <h2 class="title2">Profile</h2>
           <p>
-            Lulusan S1 Teknologi Informasi Universitas Udayana (IPK 3,41). Menguasai berbagai macam Bahasa Pemrograman dasar seperti HTML, PHP, CSS, dan Javascript.<br /><br />
-            suscipit fuga asperiores, fugit incidunt voluptas officiis consectetur temporibus beatae similique nemo nobis natus sunt voluptates itaque aut! Architecto veniam consectetur itaque maxime quidem aperiam quos voluptatibus nam?
+            Lulusan S1 Teknologi Informasi Universitas Udayana. Memiliki ketertarikan terhadap Web Design dan menguasai Bahasa Pemrograman dasar seperti HTML, CSS, dan Javascript. Memiliki keinginan untuk belajar, serta dapat bekerja secara individu maupun kelompok.<br /><br />
           </p>
         </div>
         <div class="about">
           <h2 class="title2">PENGALAMAN KERJA</h2>
-          <div class="box">
+          <ul>
+            <li>Kerja Praktek</li>
+          </ul>
+          <div class="box_kp">
             <div class="year_company">
-              <h5>2018 - present</h5>
-              <h5>Comapny Name</h5>
+              <h5>2018</h5>
+              <h5>Samsat Denpasar</h5>
             </div>
             <div class="text">
-              <h4>Junior UX Designer</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quo ex perferendis non ipsum provident voluptatum distinctio! Reiciendis, deleniti eos.</p>
+              <h4>Pegawai Magang</h4>
+              <p>Bertugas menginput data pajak kendaran, membantu pengecekan Surat Tanda Nomor Kendaran apakah sudah sesuai dengan data yang diberikan oleh pegawai samsat serta membantu perbaikan komponen kerja seperti komputer dan printer yang mengalami masalah.</p>
             </div>
           </div>
-          <div class="box">
+          <ul>
+            <li>Daily Work</li>
+          </ul>
+          <div class="box_dw">
             <div class="year_company">
-              <h5>2018 - present</h5>
-              <h5>Comapny Name</h5>
+              <h5>2023</h5>
+              <h5>AlamTirta <br>Outbond</h5>
             </div>
             <div class="text">
-              <h4>Junior UX Designer</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quo ex perferendis non ipsum provident voluptatum distinctio! Reiciendis, deleniti eos.</p>
+              <h4>Fasilitator</h4>
+              <p>Bertugas membantu pelaksanaan kegiatan aktivitas outdoor, terutama dalam hal membantu memfasilitasi peserta jika ada kendala dalam melaksanakan permainan.</p>
             </div>
           </div>
-          <div class="box">
+          <div class="box_dw">
             <div class="year_company">
-              <h5>2018 - present</h5>
-              <h5>Comapny Name</h5>
+              <h5>2018</h5>
+              <h5>Ayana Hotel</h5>
             </div>
             <div class="text">
-              <h4>Junior UX Designer</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quo ex perferendis non ipsum provident voluptatum distinctio! Reiciendis, deleniti eos.</p>
+              <h4>Banquet</h4>
+              <p>Bertugas untuk membantu menyiapkan dan menata berbagai macam properti yang digunakan untuk kegiatan dan menangani kegiatan pesta atau jamuan makan yang di selenggarakan di hotel.</p>
             </div>
           </div>
         </div>
@@ -137,36 +142,29 @@
           <h2 class="title2">Professional Skills</h2>
           <div class="box">
             <h4>HTML</h4>
-            <div class="percent">
-              <div style="width: 90%"></div>
-            </div>
-          </div>
-          <div class="box">
-            <h4>CSS</h4>
-            <div class="percent">
+            <div class="percent"><span>70%</span>
               <div style="width: 70%"></div>
             </div>
           </div>
           <div class="box">
-            <h4>PHP</h4>
-            <div class="percent">
+            <h4>CSS</h4>
+            <div class="percent"><span>65%</span>
               <div style="width: 65%"></div>
             </div>
           </div>
           <div class="box">
-            <h4>Photoshop</h4>
+            <h4>MS Office</h4>
             <div class="percent">
-              <div style="width: 80%"></div>
+              <div style="width: 60%"></div><span>60%</span>
             </div>
           </div>
           <div class="box">
-            <h4>Ilustrator</h4>
+            <h4>Design (AI, PS, Corel) </h4>
             <div class="percent">
-              <div style="width: 80%"></div>
+              <div style="width: 50%"></div><span>50%</span>
             </div>
           </div>
-        </div>
-
+         
         <div class="about interest">
           <h2 class="title2">Interest</h2>
           <ul>
